# homework_20_2

./: .gitignore  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_product_category.py  0004_product_is_active.py  0005_alter_product_created_at_alter_product_updated_at.py  0006_alter_product_created_at_alter_product_updated_at.py  0007_alter_product_created_at_alter_product_updated_at.py
catalog/templates/catalog/: base.html  contacts.html  index.html  product_form.html  product_page.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: custom_tag.py
config/: settings.py  urls.py
materials/: admin.py  models.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_material_is_published_material_slug_and_more.py
materials/templates/materials/: material_confirm_delete.html  material_detail.html  material_form.html  material_list.html
